fix: horizontal scroll enabled on mobile devices

--- a/src/assets/scss/_education.scss
+++ b/src/assets/scss/_education.scss
@@ -48,7 +48,6 @@
   display: block;
   height: calc(100vw + 50px);
   overflow-y: auto;
-  overflow-x: hidden;
   transform: rotate(-90deg) translateX(-25px) translateY(-400px);
   transform-origin: right top;
   padding-top: 75px;
